--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Demo Slot Gacor Pragmatic Play.
 baseurl: "" # the subpath of your site, e.g. /newpath-for-emping
-url: "http://example.com" # the base hostname & protocol for your site
+url: "https://maxwin493.servegame.com/dajjal88slot/" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
 GoogleAnalytics: UA-xxxxxx-x
