--- a/_data/demoselot.yml
+++ b/_data/demoselot.yml
@@ -18,6 +18,11 @@
   img: https://pafikabpasuruan.org/pp/vs20starlightx.jpg
   logo:
   
+- title: Sweet Bonanza
+  url: https://d3pvfi6m7bxu71.cloudfront.net/gs2c/openGame.do?lang=id&cur=IDR&gameSymbol=vs20fruitsw&websiteUrl=https%3A%2F%2Fdemogamesfree.pragmaticplay.net&jurisdiction=99
+  img: https://pafikabpasuruan.org/pp/vs20fruitsw.jpg
+  logo:
+  
 - title: Sweet Bonanza 1000
   url: https://d3pvfi6m7bxu71.cloudfront.net/gs2c/openGame.do?lang=id&cur=IDR&gameSymbol=vs20fruitswx&websiteUrl=https%3A%2F%2Fdemogamesfree.pragmaticplay.net&jurisdiction=99
   img: https://pafikabpasuruan.org/pp/vs20fruitswx.jpg
