--- a/_data/demoselot.yml
+++ b/_data/demoselot.yml
@@ -42,3 +42,8 @@
   url: https://d3pvfi6m7bxu71.cloudfront.net/gs2c/openGame.do?lang=id&cur=IDR&gameSymbol=vs20sbxmas&websiteUrl=https%3A%2F%2Fdemogamesfree.pragmaticplay.net&jurisdiction=99
   img: https://pafikabpasuruan.org/pp/vs20sbxmas.jpg
   logo:
+  
+- title: Wisdom of Athena
+  url: https://d3pvfi6m7bxu71.cloudfront.net/gs2c/openGame.do?lang=id&cur=IDR&gameSymbol=vs20procount&websiteUrl=https%3A%2F%2Fdemogamesfree.pragmaticplay.net&jurisdiction=99
+  img: https://pafikabpasuruan.org/pp/vs20procount.jpg
+  logo:
