--- a/_data/demoselot.yml
+++ b/_data/demoselot.yml
@@ -52,3 +52,8 @@
   url: https://d3pvfi6m7bxu71.cloudfront.net/gs2c/openGame.do?lang=id&cur=IDR&gameSymbol=vs20sugarrushx&websiteUrl=https%3A%2F%2Fdemogamesfree.pragmaticplay.net&jurisdiction=99
   img: https://pafikabpasuruan.org/pp/vs20sugarrushx.jpg
   logo:
+  
+- title: Gates Of GatotKaca
+  url: https://d3pvfi6m7bxu71.cloudfront.net/gs2c/openGame.do?lang=id&cur=IDR&gameSymbol=vs20gatotgates&websiteUrl=https%3A%2F%2Fdemogamesfree.pragmaticplay.net&jurisdiction=99
+  img: https://pafikabpasuruan.org/pp/vs20gatotgates.jpg
+  logo:
