--- a/_data/demoselot.yml
+++ b/_data/demoselot.yml
@@ -3,6 +3,11 @@
   img: https://pafikabpasuruan.org/pp/vs20olympgate.jpg
   logo:
   
+- title: Power Of Ninja
+  url: https://d3pvfi6m7bxu71.cloudfront.net/gs2c/openGame.do?lang=id&cur=IDR&gameSymbol=vs20ninjapower&websiteUrl=https%3A%2F%2Fdemogamesfree.pragmaticplay.net&jurisdiction=99
+  img: https://pafikabpasuruan.org/pp/vs20ninjapower.jpg
+  logo:
+  
 - title: Gates Of Olympus 1000
   url: https://d3pvfi6m7bxu71.cloudfront.net/gs2c/openGame.do?lang=id&cur=IDR&gameSymbol=vs20olympx&websiteUrl=https%3A%2F%2Fdemogamesfree.pragmaticplay.net&jurisdiction=99
   img: https://pafikabpasuruan.org/pp/vs20olympx.jpg
