--- a/_data/demoselot.yml
+++ b/_data/demoselot.yml
@@ -72,3 +72,13 @@
   url: https://d3pvfi6m7bxu71.cloudfront.net/gs2c/openGame.do?lang=id&cur=IDR&gameSymbol=vs20aztecgates&websiteUrl=https%3A%2F%2Fdemogamesfree.pragmaticplay.net&jurisdiction=99
   img: https://pafikabpasuruan.org/pp/vs20aztecgates.jpg
   logo:
+  
+- title: Fortune Of the Aztec
+  url: https://d3pvfi6m7bxu71.cloudfront.net/gs2c/openGame.do?lang=id&cur=IDR&gameSymbol=vswaysstrlght&websiteUrl=https%3A%2F%2Fdemogamesfree.pragmaticplay.net&jurisdiction=99
+  img: https://pafikabpasuruan.org/pp/vswaysstrlght.jpg
+  logo:
+  
+- title: The Money Man
+  url: https://d3pvfi6m7bxu71.cloudfront.net/gs2c/openGame.do?lang=id&cur=IDR&gameSymbol=vswaysmoneyman&websiteUrl=https%3A%2F%2Fdemogamesfree.pragmaticplay.net&jurisdiction=99
+  img: https://pafikabpasuruan.org/pp/vswaysmoneyman.jpg
+  logo: 
